crates/schema/tests/compile_fail/field_key_invalid_literal.stderr
error: invalid FieldKey literal: key must start with letter or underscore
 --> tests/compile_fail/field_key_invalid_literal.rs:5:24
  |
5 |     let _ = field_key!("1bad");
  |                        ^^^^^^
